# silentscan

./: .gitignore  README.md  generate_test_fixtures.py  pyproject.toml  requirements-dev.txt
silentscan/: scanner.py
tests/: conftest.py  test_cleaner.py  test_scanner.py
